# betfair_profitbox

./: .gitignore  100cricket_backtest.ipynb  ADVeventid_marketid_AUG24.csv  LICENSE  README.md  account_orders_report.py  arb_sports.csv  configs.csv  cricket_backtest_back_the1.3.ipynb  cricket_live_paper.ipynb  deploy_systemd_units.sh  first.py  next_24h_cricket_markets.py  pyproject.toml  send_report_mail.py  startstrat.sh  test.ipynb
BACKTEST_DEV/: cricket_live_PROD.ipynb  strats.py  tools.ipynb
DATA/: 2024AugCricketEvents.csv
archive/: 1strat.py  2strat.py  betfair_trade_test.ipynb  close_all.py
jobs/: 2strat.py  4strat.py  arbstrat.py  eod_archive_md.sh  eod_dump_trades.py  eod_gen_trade_charts.py  live_pnl_dump.py  md_recorder.py  strat_arb.py  strat_liquidity_momentum.py  strat_risk_backfave.py  strat_trades_report.py  test_strat.py
research/: bought_data_catalogue.csv  cricket_backtest.ipynb  cricket_backtest_1market.ipynb  cricket_backtest_back_the1.3.ipynb  cricket_backtest_pricejump.ipynb  geteventMarketRunnerinfo.ipynb  logging_setup.py
store/: date_equity_pnl.csv  strat_processes.csv
strat_utils/: setup_logging.py
systemd_files/: 2strat.service  3strat.service  4strat.service  arbstrat.service  eod_jobs.service  eod_jobs.timer  live_pnl.service  live_pnl.timer  md_recorder-restart.service  md_recorder-restart.timer  md_recorder.service  strat_arb.service  strat_latent_microstructure.service  strat_liquidity_momentum.service  strat_risk_backfave.service  strat_trades_report.service  strat_trades_report.timer  write_daily_equity_pnl.service
(+3555 files in other folders)
