[project]
name = "bet-poetry"
version = "0.1.0"
description = "Poetry package for betfair algo betting project, HCoussens"
authors = [
    {name = "Hugo, Coussens"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flumine (>=2.10.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "betfairlightweight (>=2.21.2,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pydantic (>=2.9.0)",
    "notebook (>=7.5.1,<8.0.0)",
    "jupyterlab (>=4.5.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
